TablePartial base_template {
  id bigint [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

TablePartial soft_delete_template {
  is_deleted boolean [not null, default: false]
  deleted_at timestamp
}

TablePartial user_audit_template {
  created_by_user_id bigint [ref: > users.id]
  updated_by_user_id bigint [ref: > users.id]
}

enum match_status {
  created // The match just got created
  scheduling // (might also enter this state on reschedule)
  waiting // Match is in queue
  in_progress // Match is currently being played out on an engine
  failed
  team_a_win
  team_b_win
  draw
  submission_valid
  submission_invalid
}

enum match_reason {
  validation
  scrimmage
  matchmaking
  tournament
  other
}

enum game_match_file_visibility {
  everyone
  team
  admin
}

enum submission_validity {
  valid
  invalid
  not_evaluated
  not_evaluated_autoset
}

enum team_type {
  regular
  ta_bot
}

// File Storage System
Table file_records {
  ~base_template
  uuid uuid [not null, unique]
  filename varchar [not null]
  content_type varchar(255) [not null]
  size bigint [not null]
  sha256 varchar [not null]
  storage_path varchar [not null]

  compression_codec varchar(32)

  ~soft_delete_template
}

// Stores high level account related information.
// Each entity here corresponds one-to-one with a row in
// supabase auth.
Table users {
  ~base_template
  uuid uuid [not null, unique, note: 'corresponds with supabase user UUID']
  email varchar(255) [not null, unique]
  is_admin boolean [not null, default: false]
  is_service_account boolean [not null, default: false]

  resume_file bigint [unique, ref: - file_records.id]
}

// Stores platform-wide player related information (username,
// badges, achievements, etc.)
Table players {
  ~base_template
  user_id bigint [not null, unique, ref: - users.id]
  username varchar(50) [not null, unique]
  username_normalized varchar(50) [not null, unique]
  full_name varchar(100)
  description varchar(512)
  school varchar(150)
  major varchar(256)
  github_link varchar(500)
  linkedin_link varchar(500)
  website_link varchar(500)
}

// A specific competition. Each competition has its own teams,
// matches, rules, etc.
Table competitions {
  ~base_template
  slug varchar(255) [not null, unique]
  name varchar [not null]
  description varchar
  is_active boolean [not null, default: false]
  is_whitelisted boolean [not null, default: false]
  max_players_per_team integer [not null]
  team_submission_storage_size bigint [not null, default: 0]

  settings jsonb [not null, default: '{}']

  allow_create_team boolean [not null, default: false]
  allow_join_team boolean [not null, default: false]
  allow_leave_team boolean [not null, default: false]
  allow_new_submission boolean [not null, default: false]
  allow_set_submission boolean [not null, default: false]
  allow_edit_team_name boolean [not null, default: false]
  allow_create_user_match boolean [not null, default: false]
}

Table ladders {
  ~base_template

  competition_id bigint [not null, ref: > competitions.id]
  ladder varchar(50) [not null]

  allow_user_matches boolean [not null, default: false]
  scheduled_matchmaking_enabled boolean [not null, default: false]
  scheduled_matchmaking_cron text

  max_queued_per_team integer [not null, default: 10]

  glicko_default_rating float8 [not null]
  glicko_default_rd float8 [not null]
  glicko_rd_max float8 [not null]
  glicko_rd_min float8
  glicko_phi_inflation_per_day float8 [not null, default: 0.0]
  glicko_tau float8 [not null]
  glicko_sigma_default float8 [not null]
  glicko_sigma_min float8
  glicko_sigma_max float8

  indexes {
    (competition_id, ladder) [unique]
  }
}

// Entries for whitelisted players on whitelist enforced
// competitions
Table whitelist_entries {
  ~base_template
  competition_id bigint [not null, ref: > competitions.id]
  email varchar(255)
}

// Teams
Table teams {
  ~base_template
  competition_id bigint [not null, ref: > competitions.id]
  uuid uuid [not null, unique, default: `gen_random_uuid()`]
  name varchar(50) [not null]
  name_normalized varchar(50) [not null]
  quote varchar
  join_code varchar(50) [unique]
  display_members boolean [not null]
  active_submission_id bigint [ref: > submissions.id]
  type team_type [not null, default: 'regular']
  cached_leaderboard_rank integer

  ~soft_delete_template
  ~user_audit_template

  Indexes {
    (competition_id, name_normalized) [unique]
  }
}

// Stores team statistics for a specific ladder
Table team_stats {
  ~base_template
  team_id bigint [not null, ref: > teams.id]
  competition_id bigint [not null, ref: > competitions.id]

  ladder varchar(50) [not null]
  matches_played integer [not null, default: 0]
  wins integer [not null, default: 0]
  losses integer [not null, default: 0]
  draws integer [not null, default: 0]
  glicko_rating float8 [not null]
  glicko_rd float8 [not null]
  glicko_volatility float8 [not null]

  Indexes {
    (team_id, ladder) [unique]
  }
}

// Join table storing player team membership for a specific
// competition
Table team_members {
  ~base_template
  player_id bigint [not null, ref: > players.id]
  team_id bigint [not null, ref: > teams.id]
  competition_id bigint [not null, ref: > competitions.id]

  Indexes {
    (team_id, player_id) [unique]
    (competition_id, player_id) [unique]
  }
}

Table team_glicko_history {
  ~base_template
  team_id bigint [not null, ref: > teams.id]
  competition_id bigint [not null, ref: > competitions.id]

  ladder varchar(50) [not null]
  game_match_id bigint [ref: > game_matches.id]

  old_glicko float8 [not null]
  new_glicko float8 [not null]

  Indexes {
    (team_id, game_match_id)
  }
}

Table submissions {
  ~base_template
  uuid uuid [not null] // note that this is not the storage file uuid
  file_record_id bigint [not null, ref: - file_records.id]
  team_id bigint [not null, ref: > teams.id]
  description varchar(512)
  validity submission_validity [not null, default: 'not_evaluated']

  ~soft_delete_template
  ~user_audit_template
}

Table game_matches {
  ~base_template
  uuid uuid [not null, default: `gen_random_uuid()`]
  competition_id bigint [not null, ref: > competitions.id]
  ladder varchar(50) [not null]

  initiating_team_id bigint [ref: > teams.id]

  team_a_id bigint [not null, ref: > teams.id]
  team_b_id bigint [not null, ref: > teams.id]

  submission_a_id bigint [not null, ref: > submissions.id]
  submission_b_id bigint [not null, ref: > submissions.id]

  match_settings jsonb [not null]

  status match_status [not null, default: 'scheduling']
  reason match_reason [not null, default: 'other']

  matchmaking_event_id bigint [ref: > matchmaking_events.id]

  scheduled_at timestamp
  started_at timestamp
  finished_at timestamp

  // Optional metadata reported by a game when it reaches a final result.
  map_code varchar(100)
  outcome_reason_code varchar(100)

  times_scheduled integer [not null, default: 0]

  ~user_audit_template

  Note: '''
  PostgreSQL partial indexes are defined in V19__add_game_match_outcome_metadata.sql:
  - game_matches_competition_map_code_idx ON (competition_id, map_code) WHERE map_code IS NOT NULL
  - game_matches_competition_outcome_reason_code_idx ON (competition_id, outcome_reason_code) WHERE outcome_reason_code IS NOT NULL

  DBML does not support partial-index predicates, so these indexes are documented here rather than
  represented as ordinary DBML indexes.
  '''
}

Table game_match_outcome_reasons {
  id bigint [primary key, increment]
  created_at "timestamp with time zone" [not null]
  updated_at "timestamp with time zone" [not null]

  competition_id bigint [not null]
  code varchar(100) [not null]
  display_label varchar(255) [not null]
  visible boolean [not null, default: true]

  Indexes {
    (competition_id, code) [unique, name: 'game_match_outcome_reasons_competition_code_key']
  }
}

Ref: game_match_outcome_reasons.competition_id > competitions.id [delete: cascade]

// ─────────────────────────────────────────────────────────────────────────────
// Tournament system (double-elimination with Bo5/Bo7 series)
// ─────────────────────────────────────────────────────────────────────────────

enum tournament_status {
  DRAFT
  OPEN
  IN_PROGRESS
  COMPLETE
}

enum tournament_entry_status {
  ACTIVE
  ELIMINATED
}

enum tournament_bracket_type {
  WINNERS
  LOSERS
  GRAND_FINAL
  GRAND_FINAL_RESET
}

enum tournament_match_state {
  PENDING
  QUEUED
  IN_PROGRESS
  COMPLETE
  SKIPPED
}

// Root tournament table – scoped to a single competition, holds global metadata
// and final standings (1st/2nd place).
Table tournament {
  ~base_template

  uuid uuid [not null, unique, note: 'Public identifier for the tournament']
  competition_id bigint [not null, ref: > competitions.id]

  name varchar [not null]
  status tournament_status [not null, default: 'DRAFT']

  bracket_size integer

  // Final standings (OneToOne: each entry belongs to one tournament)
  first_place_entry_id bigint [ref: - tournament_entry.id]
  second_place_entry_id bigint [ref: - tournament_entry.id]

  started_at timestamp
  finished_at timestamp
}

// Tournament participant row: links a team to a tournament and tracks its
// seed, loss count and elimination status without mutating the Team record.
Table tournament_entry {
  ~base_template

  tournament_id bigint [not null, ref: > tournament.id]
  team_id bigint [not null, ref: > teams.id]

  seed integer [not null, note: '1-based seed assigned at enrollment']
  losses integer [not null, default: 0]
  status tournament_entry_status [not null, default: 'ACTIVE']

  eliminated_at timestamp

  Indexes {
    (tournament_id, team_id) [unique]
  }
}

// Bracket node table – each row is a BEST-OF SERIES (not a single game).
// Stores the double-elimination graph (winners/losers brackets + grand finals).
Table tournament_match {
  ~base_template

  uuid uuid [not null, unique]
  tournament_id bigint [not null, ref: > tournament.id]

  bracket_type tournament_bracket_type [not null]
  round_number integer [not null]
  match_index integer [not null, note: '1-based index within the round']

  team_one_entry_id bigint [ref: > tournament_entry.id]
  team_two_entry_id bigint [ref: > tournament_entry.id]

  state tournament_match_state [not null, default: 'PENDING']

  // Series configuration and current score
  series_length integer [not null, note: '5 for normal matches, 7 for grand finals']
  team_one_series_wins integer [not null, default: 0]
  team_two_series_wins integer [not null, default: 0]

  // Series winner/loser once the series is decided
  winner_entry_id bigint [ref: > tournament_entry.id]
  loser_entry_id bigint [ref: > tournament_entry.id]

  // Graph edges for bracket advancement (winner/loser flows)
  next_winner_match_id bigint [ref: > tournament_match.id]
  next_winner_slot integer [note: '1 = team_one_entry, 2 = team_two_entry']
  next_loser_match_id bigint [ref: > tournament_match.id]
  next_loser_slot integer [note: '1 = team_one_entry, 2 = team_two_entry']
}

// Individual games within a best-of series. OneToOne with game_match: each
// GameMatch belongs to exactly one TournamentGame.
Table tournament_game {
  ~base_template

  tournament_match_id bigint [not null, ref: > tournament_match.id]
  game_match_id bigint [not null, ref: - game_matches.id]

  game_number integer [not null, note: '1-based game number within the series']
  result_processed boolean [not null, default: false, note: 'prevents duplicate result handling']
  

  Indexes {
    (tournament_match_id, game_number) [unique]
  }
}

// A result file associated with a game match.
// Could contain stdout/stderr, a json play-by-play,
// etc.
Table game_match_files {
  ~base_template
  game_match_id bigint [not null, ref: > game_matches.id]
  uuid uuid [not null]
  slug varchar(50) [not null] // what is this file for?
  file_record_id bigint [not null, ref: - file_records.id]
  team_id bigint [ref: > teams.id]
  visibility game_match_file_visibility [not null]

  Indexes {
    (game_match_id, slug, team_id) [unique]
  }
}

Table matchmaking_events {
  ~base_template
  competition_id bigint [not null, ref: > competitions.id]
  ladder varchar(50) [not null]
}

Ref: game_matches.(competition_id, ladder) > ladders.(competition_id, ladder)
Ref: team_stats.(competition_id, ladder) > ladders.(competition_id, ladder)
Ref: team_glicko_history.(competition_id, ladder) > ladders.(competition_id, ladder)
